--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
     <groupId>JobOonJa</groupId>
     <artifactId>JobOonJa</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-core -->
+    <dependencies>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.6.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
