--- a/JobOonJa/pom.xml
+++ b/JobOonJa/pom.xml
@@ -8,14 +8,11 @@
     <artifactId>JobOonJa</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-core -->
         <dependency>
-            <groupId>io.protostuff</groupId>
-            <artifactId>protostuff-core</artifactId>
-            <version>1.6.0</version>
-            <scope>test</scope>
+            <groupId>com.dslplatform</groupId>
+            <artifactId>dsl-json</artifactId>
+            <version>1.8.5</version>
         </dependency>
-
     </dependencies>
 
 
