Get skills from outer source...

--- a/JobOonJa/pom.xml
+++ b/JobOonJa/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>htmlflow</artifactId>
             <version>3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.7</version>
+        </dependency>
     </dependencies>
 
 
