--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,23 @@
 			<artifactId>cors-filter</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/jdbc-pool -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>jdbc-pool</artifactId>
+			<version>1.1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.41</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
