--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,15 @@
 			<version>1.0.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/jdbc-pool -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>jdbc-pool</artifactId>
 			<version>1.1.0.1</version>
+		</dependency>-->
+	    <dependency>
+		    <groupId>org.xerial</groupId>
+		    <artifactId>sqlite-jdbc</artifactId>
+		    <version>3.27.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
