--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,14 +6,6 @@
 	<display-name>IE RIA</display-name>
 
 	<filter>
-		<filter-name>JwtFilter</filter-name>
-		<filter-class>ir.ac.ut.filter.TokenFilter</filter-class>
-		<init-param>
-			<param-name>excludedUrls</param-name>
-			<param-value>/login,/signup,/validate</param-value>
-		</init-param>
-	</filter>
-	<filter>
 		<filter-name>CORS Filter</filter-name>
 		<filter-class>org.ebaysf.web.cors.CORSFilter</filter-class>
 		<init-param>
@@ -26,15 +18,23 @@
 		</init-param>
 		<init-param>
 			<param-name>cors.allowed.headers</param-name>
-			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,Access-Control-Allow-Origin,autorization</param-value>
+			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,Access-Control-Allow-Origin,Authorization</param-value>
+		</init-param>
+	</filter>
+	<filter>
+		<filter-name>JwtFilter</filter-name>
+		<filter-class>ir.ac.ut.filter.TokenFilter</filter-class>
+		<init-param>
+			<param-name>excludedUrls</param-name>
+			<param-value>/login,/signup,/validate</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>JwtFilter</filter-name>
+		<filter-name>CORS Filter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
-		<filter-name>CORS Filter</filter-name>
+		<filter-name>JwtFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<servlet>
