--- a/kubernetes/joboonja-back-deployment.yaml
+++ b/kubernetes/joboonja-back-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: joboonja-back-deployment
+  namespace: ali-edalat-ns
 spec:
   replicas: 1
   selector:
