--- a/kubernetes/joboonja-back-deployment.yaml
+++ b/kubernetes/joboonja-back-deployment.yaml
@@ -13,15 +13,15 @@ spec:
         app: joboonja-back
     spec:
       containers:
-        - image: iamiranjbar/backend
+        - image: quay.io/aliedalat/backend
           imagePullPolicy: Always
           name: joboonja-back
           ports:
             - containerPort: 8080
           resources:
               limits:
-                memory: "333Mi"
-                cpu: "333m"
+                memory: "300Mi"
+                cpu: "300m"
               requests:
-                memory: "333Mi"
-                cpu: "333m"
+                memory: "300Mi"
+                cpu: "300m"
