--- a/kubernetes/joboonja-db-deployment.yaml
+++ b/kubernetes/joboonja-db-deployment.yaml
@@ -3,11 +3,13 @@ kind: Service
 metadata:
   name: db
 spec:
+  type: NodePort
   ports:
   - port: 3306
+    nodePort: 30936
   selector:
     app: db
-  clusterIP: None
+  # clusterIP: None
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
