--- a/kubernetes/joboonja-back-deployment.yaml
+++ b/kubernetes/joboonja-back-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ali-edalat-ns
 spec:
   replicas: 1
+  maxUnavailable: 100%
   selector:
     matchLabels:
       app: joboonja-back
