--- a/kubernetes/joboonja-db-pv.yaml
+++ b/kubernetes/joboonja-db-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: mysql-pv-claim2
 spec:
   storageClassName: manual
   accessModes:
